The 'FilterInfo' component has been modified to prevent overflow of the container displaying information about the current state of applied filters on the page. The 'ListHotLinks' component now includes sorting logic for films based on 'new' and 'premiere' categories. Additional functions have been introduced in the 'Sorting.js' file to enable sorting movies by year, by year and id, and by title. Furthermore, changes have been made to the 'Sorting.js' file to incorporate sorting parameters for the 'sortByRating' function, allowing movies to be sorted by rating while retaining the previous sorting options. This enhancement provides greater flexibility and precision in sorting movies based on rating. The 'sortByOption' function within the same file has also been adjusted to prioritize newer movies based on the specified sorting parameter.

--- a/src/Components/UI/FilterInfo/FilterInfo.css
+++ b/src/Components/UI/FilterInfo/FilterInfo.css
@@ -38,6 +38,11 @@
 
 .filter-text {
   margin-right: 11px;
+  max-width: 498px;
   font-size: 11px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: default;
   color: var(--color-filter-info);
 }
